--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" title="" type="" />
+    <link rel="stylesheet" href="https://dnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" title="" type="" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -238,7 +238,7 @@
 
           <p>
 
-      In this service you can buy a girl for life time you can fo whatever you want    
+      In this service you can buy a girl for life time you can do whatever you want   to do 
 
      
 
@@ -285,7 +285,7 @@
       <div class="desc">
 
         <h3>One Girl  - Forget The Rest</h3>
-
+<h1></h1>
         <p>
 
           
